# social-media-web-app

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/apps/core/: pagination.py
backend/apps/posts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_remove_post_image_url_post_image_urls.py  0003_post_likes_comment.py  0004_alter_post_content.py  0005_post_parent_post.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_avatar_url.py  0003_user_is_private_alter_user_is_active.py  0004_user_followers_alter_user_bio_alter_user_email.py  0005_remove_user_followers_alter_user_is_active_follow.py
backend/base/: views.py
backend/config/: .env  settings.py  urls.py
docs/: API_DOC.md  BACKEND_SETUP.md  BACK_FRONT_INTEGRATION.md  BACK_FRONT_SETUP.md
frontend/: SETUP.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/animations/: variants.js
frontend/src/constants/: feedData.js
frontend/src/hooks/: useAuthInitialize.js  useComments.js  useOnboardingGuard.js
frontend/src/layouts/: DashboardLayout.jsx
frontend/src/pages/: AuthPage.jsx  Dashboard.jsx
frontend/src/routes/: AppRoutes.jsx  ProtectedRoute.jsx
frontend/src/services/: api.js  authService.js  authStorage.js  cloudinaryService.js  postService.js
frontend/src/store/: store.js
frontend/src/utils/: onboardingGuard.js  toast.js  userStatus.js
(+50 files in other folders)
